syntax = "proto3";

package company;

service ClientService {
    rpc CreateCompany(CreateCompanyRequest) returns (Company) {}
    rpc FindAllCompany(Empty) returns (stream Companys) {}
    rpc FindOneCompany(FindOneCompanyRequest) returns (Company) {}
    rpc UpdateCompany(UpdateCompanyRequest) returns (Company) {}
    rpc RemoveCompany(FindOneCompanyRequest) returns (Company) {}
}

message Empty {}

message UpdateCompanyRequest {
  string id = 1;
}
message FindOneCompanyRequest {
   string id = 1;
}

message Companys {
  repeated Company companys = 1;
}

message CreateCompanyRequest {
    string name = 1;
    string code = 2;
}

message Company {
  string id = 1;
  string name = 2;
  string code = 3;
}

